# formula-engine

./: .gitignore  .nucleus.yaml  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  README.md  pmd-ruleset.xml  pom.xml  pom.xml.deprecated  settings.xml
.circleci/: config.yml
.git2gus/: config.json
.github/workflows/: ci.yml  maven-publish.yml  maven-release.yml
api/: pom.xml
docs/coverage/: pom.xml
google-test/: pom.xml
h2-test/: pom.xml
h2-test/src/test/goldfiles/FormulaFields/: testAbsCurr.xml  testAbsSwapTypes.xml  testAddDate.xml  (+231 more)
impl/: pom.xml
impl/src/main/antlr/: FormulaGrammar.g
mysql-test/: pom.xml
oracle-test/: pom.xml
presto-test/: pom.xml
sfdc_metadata/cred_scan_triage/: triage.yaml
sqlite-test/: pom.xml
sqlserver-test/: pom.xml
src/test/goldfiles/FormulaFields/: testAbsUsesLen.xml  testAbsUsesMOD.xml  testAbsUsesMinus.xml  testAbsUsesRound.xml  testAbsUsesSqrt.xml  testAbsUsesValue.xml  testAddDateTimeGivingDate.xml  testAddHoursWithTwoCustFields.xml  testAddScale.xml  testAddWithCaseExpr.xml  testBVLWithUrl.xml  testBooleanNeq.xml  testConstDoubleNegation.xml  testDateAllConstantsNonLeap.xml  testDateNonLeapYear2.xml  testDateTimeValueWithInvalidString.xml  testDateVarConstVar.xml  testDateVariableYear.xml  testExpUsesAbs.xml  testExpUsesFloor.xml  testExpUsesLn.xml  testExpUsesSqrt.xml  testFloorUsesCase.xml  testFloorUsesCeil.xml  testFloorUsesFloor.xml  testFloorUsesLog.xml  testFloorUsesRound.xml  testISBLANKWithUrl.xml  testISNULLWithPer.xml  testISNULLWithUrl.xml  testIfBeginsUsesPhone.xml  testIfContainsUsesEmail.xml  testIfContainsUsesPhone.xml  testIfContainsUsesText.xml  testIfDateCompareGreaterThan.xml  testIfDateCompareLessThanOrEqual.xml  testIfDateTimeCompareGtThanOrEqual.xml  testIfNumCompareEqual.xml  testIfNumCompareGreaterOrEqual.xml  testIfReturningNullForDateType.xml  (+26 more)
test-utils/: pom.xml
(+5863 files in other folders)
