#bazel file to work with for local build
#https://confluence.internal.salesforce.com/display/COREBUILD/Work+With+Bazel+Packages#WorkWithBazelPackages-HowtousetheSNAPSHOTversionofoff-coreMavenartifactswithaBazelbuild

load("@rules_java//java:defs.bzl", "java_import")

package(default_visibility = ["//visibility:public"])

java_import(
    name = "com_salesforce_formula_formula_engine_api",
    jars = glob(["api/target/formula-engine-*-SNAPSHOT.jar"]),
    srcjar = glob(["api/target/formula-engine-*-SNAPSHOT-sources.jar"])[0],
)

java_import(
    name = "com_salesforce_formula_formula_engine_impl",
    jars = glob(["impl/target/formula-engine-*-SNAPSHOT.jar"]),
    srcjar = glob(["impl/target/formula-engine-*-SNAPSHOT-sources.jar"])[0],
)

java_import(
    name = "com_salesforce_formula_formula_engine_test_utils",
    jars = glob(["test-utils/target/formula-engine-*-SNAPSHOT.jar"]),
    srcjar = glob(["test-utils/target/formula-engine-*-SNAPSHOT-sources.jar"])[0],
)

